# j0-compiler

./: .gitignore  Codegen.hs  Cradle.hs  Emit.hs  Lexer2.hs  Parser2.hs  README.md  src.cabal
output/: Makefile  prog  prog.ll  prog2  prog2.ll  prog2.s
report/: report.tex
src/: Codegen.hs  Codegen.lhs  Emit.hs  Emit.lhs  Lexer.hs  Lexert.hs  Lexert.lhs  Main.hs  Main.hsh  Main.lhs  Parser.hs  Parser2.hs  ParserMini.hs  ParserMini.lhs  Parsert.hs  SyntaxMini.hs  SyntaxMini.lhs  Syntaxt.hs
test/: prog2  test.j0  test.j0.ll  test.j0.s
