name: src
version: 0.0.1
cabal-version: ==1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: j0-compiler
description:  
data-dir: ""
extra-source-files: ""
 
executable src
    build-depends: QuickCheck -any, base -any, containers -any,
                   haskeline -any, mtl -any, parsec3 -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: "" src
    other-modules: Parser2 Lexer2 Emit Codegen Parser Lexer Syntax Emit
                   Codegen
 
test-suite test-src
    build-depends: QuickCheck -any, base -any, containers -any,
                   haskeline -any, mtl -any, parsec3 -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src