name: src
version: 0.0.1
cabal-version: ==1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: j0-compiler
description:
data-dir: ""
extra-source-files: ""

executable src
    build-depends: QuickCheck -any, base -any, containers -any,
                   haskeline -any, llvm-general ==3.3.11.1,
                   llvm-general-pure ==3.3.11.1, mtl -any, parsec -any
    main-is: Main.lhs
    buildable: True
    hs-source-dirs: src
    other-modules: Lexert ParserMini Emit SyntaxMini Codegen

test-suite test-src
    build-depends: QuickCheck -any, base -any, containers -any,
                   haskeline -any, llvm-general ==3.3.11.1,
                   llvm-general-pure ==3.3.11.1, mtl -any, parsec -any
    type: exitcode-stdio-1.0
    main-is: Main.lhs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
